--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     margin: 0%;
     font-family: "Lato",sans-serif; 
 }
+html{
+    scroll-behavior: smooth;
+}
 #particles-js{
     height: 100vh;
     width: 100%;
@@ -63,12 +66,15 @@ p{
 .cont-menu{
     width: 100%;
     height: 60.8vh;
-    position: absolute;
     transition: all .5s ease;
-    background: rgba(155, 155, 155, 0.863);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.534);
-    backdrop-filter: blur( 100px );
-    -webkit-backdrop-filter: blur(300px );
+    position: absolute;
+
+    
+    background: rgba( 247, 247, 247, 0.5 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    opacity: 1;
+    backdrop-filter: blur(17px);
+    -webkit-backdrop-filter:blur(17px); 
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 /* Estilos por agregar en JavaScript */
@@ -88,7 +94,6 @@ p{
     text-decoration: none;
     padding: 10px 50px;
     cursor: pointer;
-    
 }
 .cont-menu ul li:hover{
     background-color: rgb(228,228,228);
@@ -97,11 +102,11 @@ p{
 /*fin header 1*/
 /*inicio presentación*/
 .presentacion{
-    background: green;
     width: 100%;
     height: 95.54601226993865vw;
     background-image: url(./img/Grupo\ 14430.png);
     background-size: 100% 100%;
+    scroll-margin-top: 8ex;
 }
 .text_presentacion{
     color: aliceblue;
@@ -166,6 +171,10 @@ li{
     font-size: 0.8rem;
     color: white;
 }
+a{
+    font-size: 1.125;
+    color: white;  
+}
 .lista li::marker{
     color:#00CDBA;
     transform: rotate(45deg);
@@ -174,6 +183,7 @@ li{
 /*inicio portafolio*/
 .portafolio{
     background: rgba(4,8,16,255);
+    scroll-margin-top: 8ex;
 }
 .portafolio_izquierda{
     display: flex; 
@@ -281,6 +291,7 @@ li{
 .contactame{
     background: rgba(4,8,16,255);
     padding-top: 15vh;
+    scroll-margin-top: 8ex;
 }
 strong{
     color: #EAEAEA;
