--- a/style.css
+++ b/style.css
@@ -260,12 +260,6 @@ a::after{
     position: relative;
     margin-left: -1rem;
 }
-/*.cuadrado_tramsparente:hover{
-    width: 149px;
-    height: 140px;
-    background: #00CDBA;
-    box-shadow: 0 0 1px  #00CDBA, 0 0 1px  #00CDBA, 0 0 1px  #00CDBA;
-}*/
 .cuadrado_gris{
     width: 98%;
     height: 98%;
@@ -371,7 +365,7 @@ footer{
 .boton_Descargar_curriculum{
     display: none;
 }
-@media (min-width:520px){
+@media (min-width:900px){
     .header1{
         height:7.063rem;
     }
@@ -400,7 +394,7 @@ footer{
         margin-top: 2.3em;
     }
     .text_presentacion{
-        width:35%;
+        width:70vh;
         margin-bottom: 1rem;
         font-size: 2.5rem; 
     }
@@ -434,41 +428,37 @@ footer{
         width:  41.40875133404482vh;
         border-radius: 200px;
         margin-left: 60%;
-        /*margin-top: 4.098360655737705vh;
-        left: 50%;
-        margin-bottom: 10%;
-        position: relative;*/
 }
-.lista{
-    margin-left: 10%;
-    justify-content:left;
-    display: flex;
-    background: rgba(255, 0, 0, 0);
-    width: 90%;
+    .lista{
+        margin-left: 10%;
+        justify-content:left;
+        display: flex;
+        background: rgba(255, 0, 0, 0);
+        width: 90%;
 }
-.li1{
-    padding-right: 1.5vh;
+    .li1{
+        padding-right: 1.5vh;
 }
-li{
-    font-size: 1rem;
+    li{
+        font-size: 1rem;
 }
-.sobre_mi_li{
-    width: 5rem;
+    .sobre_mi_li{
+     width: 5rem;
 }
-.textos_parrafos{
-    margin-top:13%;
+    .textos_parrafos{
+        margin-top:13%;
 }
-.history{
-    width: 35%;  
+    .history{
+        width: 35%;  
 }
-.cuadrado_tramsparente{
-    width: 528px;
-    height: 293px;
+    .cuadrado_tramsparente{
+        width: 528px;
+        height: 293px;
 }
-.imagen_web_portafolio{
-    width: 528px;
-    height: 293px;
-    margin-left: -32rem;
+    .imagen_web_portafolio{
+        width: 528px;
+        height: 293px;
+        margin-left: -32rem;
 }
 .imagen_web_Codigo{
      width: 528px;
@@ -545,9 +535,6 @@ margin-top: 3vh;
 text-align: center;
 justify-content: center;
 }
-/*.boton_Descargar_curriculum li{
-    list-style: red;
-}*/
     .titulo_contacto{
         font-size: 2.5rem;
         justify-content: center;
@@ -645,9 +632,10 @@ footer{
 font-size: 1rem;
 }
 }
-/*@media (max-width:712px){
+/*@media (max-width:968px){
+
+    
     -la lista de los programas que manejo
-    -el h1
     - y agrandar las fotos de los proyectos
     }*/
 @media (max-width:300px){
